# treehouse-lab

./: .gitignore  AGENTS.md  README.md  app.py  program.md  pyproject.toml
.github/workflows/: ci.yml
.playwright-cli/: page-2026-04-17T17-29-41-983Z.yml  page-2026-04-17T17-29-59-782Z.yml  page-2026-04-17T17-30-14-873Z.yml  page-2026-04-17T17-30-33-758Z.yml  page-2026-04-17T17-30-49-667Z.yml
configs/: search_space.yaml
configs/benchmark_suites/: public_v1_3.yaml
configs/datasets/: adult_uci.yaml  bank-valid-test.yaml  bank_marketing_uci.yaml  breast_cancer.yaml  churn_demo.yaml  covertype_uci.yaml  developer-burnout-v2.yaml  developer-burnout.yaml  implementation_churn.yaml  smoke_breast_cancer.yaml  stress_churn.yaml  titanic_kaggle.yaml
docs/: architecture.md  autonomous-loop.md  benchmark-report-example.md  benchmark-report.md  benchmarks.md  cli.md  contracts.md  evaluation-policy.md  export-contract.md  glossary.md  mvp.md  roadmap.md  sample-outputs.md  v1-2-polish.md  vision-2.0.md  walkthrough.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
scripts/: fetch_adult.py  fetch_bank_marketing.py  fetch_covertype.py  setup_benchmark_env.sh
src/booster_seat/: __init__.py  runner.py
src/treehouse_lab/: __init__.py  api.py  benchmark_suite.py  cli.py  comparison.py  config.py  datasets.py  diagnosis.py  evaluation.py  exporting.py  features.py  grounding.py  journal.py  llm.py  loop.py  mutations.py  narratives.py  proposals.py  runner.py  runtime_settings.py
tests/: test_2_0_positioning.py  test_api_advisor.py  test_api_intake.py  test_api_settings.py  test_benchmark_suite.py  test_comparison.py  test_datasets.py  test_exporting.py  test_loop_selection.py  test_mutations.py  test_public_dataset_fetchers.py  test_runner_feature_generation.py  test_runner_multiclass.py  test_v12_polish_closeout.py  test_version_metadata.py
