[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "treehouse-lab"
version = "0.1.0"
description = "Karpathy-style autoresearch loops for tabular ML"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Matthew Davis" }
]
dependencies = [
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "xgboost>=2.1",
  "optuna>=4.0",
  "mlflow>=2.20",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
featuregen = [
  "openfe>=0.0.12",
  "featuretools>=1.31"
]
dev = [
  "pytest>=8.3",
  "ruff>=0.8"
]

[tool.setuptools.packages.find]
where = ["src"]
